--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </footer>
     <script>
         document.querySelectorAll('a').forEach(link => {
-            link.onclick = function(e) {
+            const conteudo = document.getElementById('conteudo')
+
+            link.onclick = function(e) {                
                 e.preventDefault()
-                
-                const conteudo = document.getElementById('conteudo')
                 fetch(link.href)
                     .then(resp => resp.text())
-                    .then(html => conteudo.innerHTML())
+                    .then(html => conteudo.innerHTML = html)
             }
         })
     </script>
